--- a/machine_learning/training.ipynb
+++ b/machine_learning/training.ipynb
@@ -30,9 +30,9 @@
     "    \"\"\"Load processed data from S3\"\"\"\n",
     "    \n",
     "    # Read parquet files\n",
-    "    user_item_df = pd.read_parquet('s3://techmart-ml-handi/processed-data/user_item_matrix/')\n",
-    "    product_stats_df = pd.read_parquet('s3://techmart-ml-handi/processed-data/product_stats/')\n",
-    "    user_features_df = pd.read_parquet('s3://techmart-ml-handi/processed-data/user_features/')\n",
+    "    user_item_df = pd.read_parquet('s3://yourbucket/processed-data/user_item_matrix/')\n",
+    "    product_stats_df = pd.read_parquet('s3://yourbucket/processed-data/product_stats/')\n",
+    "    user_features_df = pd.read_parquet('s3://yourbucket/processed-data/user_features/')\n",
     "    \n",
     "    return user_item_df, product_stats_df, user_features_df\n",
     "\n",
@@ -180,7 +180,7 @@
     "    user_item_df, product_stats_df, user_features_df = load_data_from_s3()\n",
     "    \n",
     "    # Load raw product data\n",
-    "    products_df = pd.read_csv('s3://techmart-ml-handi/raw-data/product-catalog/product_catalog.csv')\n",
+    "    products_df = pd.read_csv('s3://yourbucket/raw-data/product-catalog/product_catalog.csv')\n",
     "    \n",
     "    print(\"Training hybrid model...\")\n",
     "    hybrid_model = HybridRecommender()\n",
@@ -191,7 +191,7 @@
     "    with open('/tmp/hybrid_model.pkl', 'wb') as f:\n",
     "        pickle.dump(hybrid_model, f)\n",
     "    \n",
-    "    s3.upload_file('/tmp/hybrid_model.pkl', 'techmart-ml-handi', 'models/hybrid_model.pkl')\n",
+    "    s3.upload_file('/tmp/hybrid_model.pkl', 'yourbucket', 'models/hybrid_model.pkl')\n",
     "    \n",
     "    print(\"Generating product embeddings...\")\n",
     "    # Generate and save product embeddings to DynamoDB\n",
