--- a/machine_learning/training.ipynb
+++ b/machine_learning/training.ipynb
@@ -86,6 +86,8 @@
     "        except:\n",
     "            return []\n",
     "\n",
+    "# Testing\n",
+    "\n",
     "# Collaborative filtering\n",
     "class CollaborativeRecommender:\n",
     "    def __init__(self):\n",
